--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- META DATA -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Health Tracker App." />
+    <meta name="author" content="Gavin-Barham" />
+
+    <!-- SCRIPTS/LINKS -->
+    <!-- <link rel="shortcut icon" type="x-icon" href="./src/images/g-favicon.png" /> -->
     <link rel="stylesheet" href="./src/index.css" />
+
+    <script type="module" src="./src/main.jsx"></script>
+
+    <!-- TITLE -->
     <title>Health Tracker</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
