attempt to fix hosting issue with 404

--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
     <meta name="description" content="Health Tracker App." />
     <meta name="author" content="Gavin-Barham" />
 
-    <!-- SCRIPTS/LINKS -->
-    <!-- <link rel="shortcut icon" type="x-icon" href="./src/images/g-favicon.png" /> -->
-    <link rel="stylesheet" href="./src/index.css" />
-
-    <script type="module" src="./src/main.jsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
 
     <!-- TITLE -->
     <title>Health Tracker</title>
