--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Health Tracker App." />
     <meta name="author" content="Gavin-Barham" />
 
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="./src/main.jsx"></script>
 
     <!-- TITLE -->
     <title>Health Tracker</title>
