remove line from deploy.yml

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Health Tracker App." />
-    <meta name="author" content="Health Tracker" />
+    <meta name="author" content="Gavin Barham" />
 
     <script type="module" src="./src/main.jsx"></script>
 
