--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Health Tracker App." />
     <meta name="author" content="Gavin Barham" />
-
+    <script
+      src="https://kit.fontawesome.com/615b769e48.js"
+      crossorigin="anonymous"
+    ></script>
     <script type="module" src="./src/main.jsx"></script>
 
     <!-- TITLE -->
